--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,16 @@
 [package]
 name = "maw"
-version = "0.9.0"
+version = "0.10.0"
 edition = "2024"
 description = "A simple and efficient web framework for Rust."
 license = "MIT"
 repository = "https://github.com/Srlion/maw"
 authors = ["Srlion <srlion32@gmail.com>"]
+
+[features]
+default = []
+cookie = ["dep:cookie"]
+session = ["cookie", "serde/derive"]
 
 [dependencies]
 smallvec = "1"
@@ -33,3 +38,4 @@ minijinja = { version = "2", features = ["loader"] }
 serde_json = "1"
 quick-xml = { version = "0.38", features = ["serialize"] }
 erased-serde = "0.4"
+cookie = { version = "0.18", features = ["private", "signed"], optional = true }
