--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "maw"
-version = "0.10.1"
+version = "0.11.0"
 edition = "2024"
 description = "A simple and efficient web framework for Rust."
 license = "MIT"
@@ -11,6 +11,7 @@ authors = ["Srlion <srlion32@gmail.com>"]
 default = []
 cookie = ["dep:cookie"]
 session = ["cookie", "serde/derive"]
+logging = []
 
 [dependencies]
 smallvec = "1"
