--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "maw"
-version = "0.11.4"
+version = "0.12.0"
 edition = "2024"
 description = "A simple and efficient web framework for Rust."
 license = "MIT"
@@ -39,3 +39,5 @@ serde_json = "1"
 quick-xml = { version = "0.38", features = ["serialize"] }
 erased-serde = "0.4"
 cookie = { version = "0.18", features = ["private", "signed"], optional = true }
+futures-core = "0.3.31"
+http-body = "1.0.1"
