--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ http-body-util = "0.1"
 tracing = "0.1"
 bytes = "1"
 thiserror = "2"
-tokio = { version = "1", features = ["macros", "signal", "net"] }
+tokio = { version = "1", features = ["signal", "net"] }
 http = "1"
 serde = { version = "1", features = [] }
 hyper = { version = "1", features = [] }
