--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ cookie = ["dep:cookie"]
 session = ["cookie", "serde/derive"]
 logging = []
 xml = ["dep:quick-xml"]
-full = ["cookie", "session", "logging", "xml"]
+minijinja = ["dep:minijinja"]
+full = ["cookie", "session", "logging", "xml", "minijinja"]
 
 [dependencies]
 matchit = "0.9"
@@ -35,7 +36,11 @@ hyper-util = { version = "0.1", features = [
     "http1",
 ] }
 paste = "1"
-minijinja = { version = "2", features = ["loader", "builtins", "json"] }
+minijinja = { version = "2", optional = true, features = [
+    "loader",
+    "builtins",
+    "json",
+] }
 serde_json = "1"
 quick-xml = { version = "0.38", features = ["serialize"], optional = true }
 erased-serde = "0.4"
