--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ cookie = ["dep:cookie"]
 session = ["cookie", "serde/derive"]
 logging = []
 xml = ["dep:quick-xml"]
-minijinja = ["dep:minijinja"]
+minijinja = ["dep:minijinja", "dep:erased-serde"]
 full = ["cookie", "session", "logging", "xml", "minijinja"]
 
 [dependencies]
@@ -43,7 +43,7 @@ minijinja = { version = "2", optional = true, features = [
 ] }
 serde_json = "1"
 quick-xml = { version = "0.38", features = ["serialize"], optional = true }
-erased-serde = "0.4"
+erased-serde = { version = "0.4", optional = true }
 cookie = { version = "0.18", features = ["private", "signed"], optional = true }
 futures-core = "0.3.31"
 http-body = "1.0.1"
