--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,36 +32,39 @@ middleware = [
 full = ["xml", "minijinja", "middleware"]
 
 [dependencies]
-matchit = "0.9"
-mime_guess = "2"
-smol_str = "0.3"
-serde_urlencoded = "0.7"
-http-body-util = "0.1"
-tracing = "0.1"
-bytes = "1"
-thiserror = "2"
-tokio = { version = "1", features = ["signal", "net"] }
-http = "1"
-serde = { version = "1", features = [] }
-hyper = { version = "1", features = [] }
-hyper-util = { version = "0.1", features = [
+matchit = "0.9.1"
+mime_guess = "2.0.5"
+smol_str = "0.3.5"
+serde_urlencoded = "0.7.1"
+http-body-util = "0.1.3"
+tracing = { version = "0.1.44", default-features = false, features = ["std"] }
+bytes = "1.11.0"
+thiserror = "2.0.18"
+tokio = { version = "1.49.0", features = ["signal", "net"] }
+http = "1.4.0"
+serde = { version = "1.0.228", features = [] }
+hyper = { version = "1.8.1", features = [] }
+hyper-util = { version = "0.1.19", features = [
     "server",
     "server-graceful",
     "http1",
 ] }
-paste = "1"
-minijinja = { version = "2", optional = true, features = [
+paste = "1.0.15"
+minijinja = { version = "2.14.0", optional = true, features = [
     "loader",
     "builtins",
     "json",
 ] }
-serde_json = "1"
-quick-xml = { version = "0.38", features = ["serialize"], optional = true }
-erased-serde = { version = "0.4", optional = true }
-cookie = { version = "0.18", features = ["private", "signed"], optional = true }
+serde_json = "1.0.149"
+quick-xml = { version = "0.39.0", features = ["serialize"], optional = true }
+erased-serde = { version = "0.4.9", optional = true }
+cookie = { version = "0.18.1", features = [
+    "private",
+    "signed",
+], optional = true }
 futures-core = "0.3.31"
 http-body = "1.0.1"
-tokio-util = "0.7.17"
+tokio-util = "0.7.18"
 rand = { version = "0.9.2", optional = true, default-features = false, features = [
     "thread_rng",
 ] }
