--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,7 +62,7 @@ cookie = { version = "0.18.1", features = [
     "private",
     "signed",
 ], optional = true }
-futures-core = "0.3.31"
+futures-util = { version = "0.3.31", default-features = false }
 http-body = "1.0.1"
 tokio-util = "0.7.18"
 rand = { version = "0.9.2", optional = true, default-features = false, features = [
