--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ default = []
 xml = ["dep:quick-xml"]
 minijinja = ["dep:minijinja", "dep:erased-serde"]
 
-middleware-cookie = ["dep:cookie"]
+middleware-cookie = ["dep:cookie", "dep:postcard", "dep:base64"]
 middleware-session = ["middleware-cookie", "serde/derive"]
 middleware-logging = []
 middleware-csrf = ["middleware-cookie", "dep:rand", "dep:constant_time_eq"]
@@ -70,3 +70,5 @@ rand = { version = "0.9.2", optional = true, default-features = false, features 
 ] }
 constant_time_eq = { version = "0.4.2", optional = true }
 pin-project-lite = { version = "0.2.16", optional = true }
+postcard = { version = "1.1.3", optional = true, features = ["use-std"] }
+base64 = { version = "0.21.3", optional = true }
