--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ authors = ["Srlion <srlion32@gmail.com>"]
 default = []
 
 xml = ["dep:quick-xml"]
-minijinja = ["dep:minijinja", "dep:erased-serde"]
+minijinja = ["dep:minijinja", "dep:erased-serde", "dep:minijinja-autoreload"]
 
 middleware-cookie = ["dep:cookie", "dep:postcard", "dep:base64"]
 middleware-session = ["middleware-cookie", "serde/derive"]
@@ -55,6 +55,7 @@ minijinja = { version = "2.14.0", optional = true, features = [
     "builtins",
     "json",
 ] }
+minijinja-autoreload = { version = "2.15.1", optional = true }
 serde_json = "1.0.149"
 quick-xml = { version = "0.39.0", features = ["serialize"], optional = true }
 erased-serde = { version = "0.4.9", optional = true }
