--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,11 @@ middleware = [
 
 full = ["xml", "minijinja", "middleware"]
 
+# for examples
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
+tracing-subscriber = "0.3"
+
 [dependencies]
 matchit = "0.9.1"
 mime_guess = "2.0.5"
