--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,28 @@ full = ["xml", "minijinja", "static_files", "middleware"]
 tokio = { version = "1", features = ["full"] }
 tracing-subscriber = "0.3"
 
+[[example]]
+name = "hello_world"
+
+[[example]]
+name = "middleware"
+
+[[example]]
+name = "groups"
+required-features = ["middleware-logging"]
+
+[[example]]
+name = "cookie_session"
+required-features = ["middleware-session"]
+
+[[example]]
+name = "static_files"
+required-features = ["static_files"]
+
+[[example]]
+name = "templates"
+required-features = ["minijinja"]
+
 [dependencies]
 matchit = "0.9.1"
 mime_guess = "2.0.5"
