--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ rust-embed = { version = "8.11.0", features = [
 ], optional = true }
 serde = { version = "1.0.228", features = [] }
 serde_json = "1.0.149"
+serde_plain = "1.0.2"
 serde_urlencoded = "0.7.1"
 smol_str = "0.3.5"
 thiserror = "2.0.18"
